--- a/test.html
+++ b/test.html
@@ -10,17 +10,21 @@
 
 <body>
     <script>
-        var removeElement = function (nums, val) {
-            for (let i = 0; i < nums.length; i++) {
-                if (nums[i] == val) {
-                    nums.splice(i, 1)
-                    i--
-                }
+        var strStr = function (haystack, needle) {
+            let arr = [],
+                index = 0
+            if (!needle.length) return index
+            arr = haystack.split(needle)
+            console.log(arr)
+            if (arr.length < 2) {
+                index = -1
+            } else {
+                index = arr[0].length
             }
-            console.log(nums)
+            console.log(index)
         }
 
-        removeElement([3, 2, 2, 3], 3)
+        strStr("aaaaaa", "ba")
 
 
 
