--- a/test.html
+++ b/test.html
@@ -10,21 +10,22 @@
 
 <body>
     <script>
-        var strStr = function (haystack, needle) {
-            let arr = [],
-                index = 0
-            if (!needle.length) return index
-            arr = haystack.split(needle)
-            console.log(arr)
-            if (arr.length < 2) {
-                index = -1
-            } else {
-                index = arr[0].length
+        var searchInsert = function (nums, target) {
+            let result = 0
+            if (target < nums[0]) return result
+            for (let i = 0; i < nums.length; i++) {
+                if (nums[i] >= target) {
+                    result = i
+                    break
+                } else {
+                    result = nums.length
+                }
+
             }
-            console.log(index)
+            console.log(result)
         }
 
-        strStr("aaaaaa", "ba")
+        searchInsert([1, 3, 5, 6], 5)
 
 
 
