--- a/test.html
+++ b/test.html
@@ -10,22 +10,32 @@
 
 <body>
     <script>
-        var searchInsert = function (nums, target) {
-            let result = 0
-            if (target < nums[0]) return result
-            for (let i = 0; i < nums.length; i++) {
-                if (nums[i] >= target) {
-                    result = i
-                    break
-                } else {
-                    result = nums.length
+
+        var countAndSay = function (n) {
+            var val = "1"
+            for (let i = 1; i < n; i++) {
+                let num = 1
+                let str = ""
+                for (let j = 0; j < val.length; j++) {
+                    if (val[j] == val[j + 1]) {
+                        num++
+                    } else {
+                        str += num + val[j]
+                        num = 1
+                    }
                 }
-
+                val = str
             }
-            console.log(result)
+            console.log(val)
         }
+        countAndSay(4)
 
-        searchInsert([1, 3, 5, 6], 5)
+
+
+
+
+
+
 
 
 
