--- a/test.html
+++ b/test.html
@@ -10,25 +10,17 @@
 
 <body>
     <script>
-
-        var countAndSay = function (n) {
-            var val = "1"
-            for (let i = 1; i < n; i++) {
-                let num = 1
-                let str = ""
-                for (let j = 0; j < val.length; j++) {
-                    if (val[j] == val[j + 1]) {
-                        num++
-                    } else {
-                        str += num + val[j]
-                        num = 1
-                    }
+        var maxSubArray = function (nums) {
+            for (let i = 1; i < nums.length; i++) {
+                if (nums[i - 1] > 0) {
+                    nums[i] = nums[i] + nums[i - 1]
                 }
-                val = str
+                console.log(Math.max.apply(Math, nums))
+
             }
-            console.log(val)
-        }
-        countAndSay(4)
+        };
+        maxSubArray([-2, 1, -3, 4, -1, 2, 1, -5, 4])
+
 
 
 
