--- a/test.html
+++ b/test.html
@@ -10,16 +10,12 @@
 
 <body>
     <script>
-        var maxSubArray = function (nums) {
-            for (let i = 1; i < nums.length; i++) {
-                if (nums[i - 1] > 0) {
-                    nums[i] = nums[i] + nums[i - 1]
-                }
-                console.log(Math.max.apply(Math, nums))
-
+        var plusOne = function (digits) {
+            for (let i = digits.length - 1; i < digits.length; i--) {
+                console.log(digits[i])
             }
-        };
-        maxSubArray([-2, 1, -3, 4, -1, 2, 1, -5, 4])
+        }
+        plusOne([6, 1, 4, 5, 3, 9, 0, 1, 9, 5, 1, 8, 6, 7, 0, 5, 5, 4, 3])
 
 
 
